--- a/Ducks/Facts.html
+++ b/Ducks/Facts.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/assets/Cartoonduck.ico">
     <title>Fun Fact</title>
-    <link rel="stylesheet" href="facts.css">
-    <script src="app.js" defer></script>
+    <link rel="stylesheet" href="/Ducks/facts.css">
+    <script src="/Ducks/app.js" defer></script>
 </head>
 <body>
     <h1 id="funfact-h">💡Fun Fact Of The Day:</h1>
