--- a/Ducks/images.html
+++ b/Ducks/images.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/assets/Cartoonduck.ico">
     <title>📷Images</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="app.js"> 
+    <link rel="stylesheet" href="/Ducks/main.css">
+    <link rel="stylesheet" href="/Ducks/app.js"> 
 </head>
 <body>
    
