--- a/Ducks/videos.html
+++ b/Ducks/videos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎥Videos</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="app.js"> 
+    <link rel="stylesheet" href="/Ducks/main.css">
+    <link rel="stylesheet" href="/Ducks/app.js"> 
 </head>
 <body>
     <h1>Cute Videos of Ducks</h1>
